--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
     <title>Kopi Kuy</title>
-    <link rel="stylesheet" href="css/sample.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body>
@@ -203,6 +203,10 @@
                 </li>
                 <li>
                     <a href="#contact-us">Contact Us</a>
+                </li>
+                <li>
+                    <a href="produk.html">Shop</a>
+
                 </li>
             </ul>
             <p>© 2023 Kopi Kuy. All Rights Reserved</p>
