--- a/produk.html
+++ b/produk.html
@@ -26,19 +26,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-3 mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="belajar.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="belajar.html#best-seller">Best Seller</a>
+                        <a class="nav-link" href="index.html">Best Seller</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="belajar.html#our-team">Our Team</a>
+                        <a class="nav-link" href="index.html#our-team">Our Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="belajar.html#review">Review</a>
+                        <a class="nav-link" href="index.html">Review</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="belajar.html#contact-us">Contact Us</a>
+                        <a class="nav-link" href="index.html">Contact Us</a>
                     </li>
 
 
