--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
                     <a href="produk.html">Shop</a>
 
                 </li>
+                <li> 
+                    <a href="produk.html">Shop</a> 
+                </li>
             </ul>
             <p>© 2023 Kopi Kuy. All Rights Reserved</p>
         </div>
